// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherCurrent Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "error": undefined,
  "isLoading": false,
  "weatherCurrent": Object {},
}
`;

exports[`WeatherCurrent Reducer Tests State Changes should set error on error of loading 1`] = `
Object {
  "error": "Error",
  "isLoading": false,
  "weatherCurrent": undefined,
}
`;

exports[`WeatherCurrent Reducer Tests State Changes should set loading to true on loadCitySuccessAction 1`] = `
Object {
  "error": "Test Error",
  "isLoading": true,
  "weatherCurrent": undefined,
}
`;
